"Continue" zoom style doesn't work in all views / editors #42052

Closed
opened 2014-10-03 01:56:52 +02:00 by Olson Burry · 7 comments

System Information
Linux Mint 17 GTX275

Blender Version
Broken: 2.71, 2.72RC

Worked: I didn't find any. Went back to 2.57b

Short description of error

With Zoom style in the user preference set to "Continue", holding ctrl + middle mouse should continue to zoom in after slight mouse movement in the up or down direction.

This does not happen when in camera view (numpad 0) in the 3D view or the movie clip editor.

Exact steps for others to reproduce the error

Change Zoom style to "Continue" in the user preferences Input section
Use ctrl + middle mouse to zoom in on the default cube in a user perspective.
switch to camera mode (numpad 0) and try the same. It act like Dolly.

Most editors (including regions) respect the "Continue" zoom style - seems clip editor does not?

Very minor probably, but it would be nice if it was easy to fix just to unify this I think.

Many thanks

\Olson

**System Information** Linux Mint 17 GTX275 **Blender Version** Broken: 2.71, 2.72RC Worked: I didn't find any. Went back to 2.57b **Short description of error** With Zoom style in the user preference set to "Continue", holding ctrl + middle mouse should continue to zoom in after slight mouse movement in the up or down direction. This does not happen when in camera view (numpad 0) in the 3D view or the movie clip editor. **Exact steps for others to reproduce the error** Change Zoom style to "Continue" in the user preferences Input section Use ctrl + middle mouse to zoom in on the default cube in a user perspective. switch to camera mode (numpad 0) and try the same. It act like Dolly. Most editors (including regions) respect the "Continue" zoom style - seems clip editor does not? Very minor probably, but it would be nice if it was easy to fix just to unify this I think. Many thanks \Olson
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @OliverBurn

Added subscriber: @OliverBurn

Added subscriber: @mont29

Added subscriber: @mont29

Added subscriber: @Sergey

Added subscriber: @Sergey

Clip editor is now fixed in 26083d5.

Clip editor is now fixed in 26083d5.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sergey Sharybin self-assigned this 2014-10-07 18:08:42 +02:00

The viewport camera view is a bit trickier to support, the code around there is much more general and requires care to touch. For now considering a TODO http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Editors#3D_View

Thanks for the report anyway.

The viewport camera view is a bit trickier to support, the code around there is much more general and requires care to touch. For now considering a TODO http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Editors#3D_View Thanks for the report anyway.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42052
No description provided.