Partial fix of T42052: Clip editor does not support Continue zoom style